Fixed an alignment issue in the orderingList widget

--- a/src/styles/list-mixins.less
+++ b/src/styles/list-mixins.less
@@ -27,7 +27,8 @@
         overflow-x: hidden;
     }
 
-    ol.list {
+    ol.list, ol.helper {
+        padding-left: 0;
         margin-left: 0;
         list-style: none;
         min-height: @list-min-height;
